<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/catagorylist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#555555"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/cat_img"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/cat_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stext"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:visibility="gone" />

        <TextView
            android:id="@+id/cat_titl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:text="@string/mtext"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>