<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layoutbg" >

    <RelativeLayout
        android:id="@+id/customGalleryFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/topbar" >

        <Button
            android:id="@+id/capture"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@android:drawable/ic_menu_camera" />

        <Button
            android:id="@+id/gallery"
             android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/capture"
            android:background="@android:drawable/ic_menu_gallery" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/selection"
            android:textColor="@android:color/white"
            android:textSize="20dp" />

        <Button
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/custombutton"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/Cancel" />
    </RelativeLayout>

    <GridView
        android:id="@+id/selectedImageGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/customGalleryFooter"
        android:columnWidth="90dp"
        android:gravity="center"
        android:horizontalSpacing="10dp"
        android:numColumns="auto_fit"
        android:stretchMode="columnWidth"
        android:verticalSpacing="10dp" />

    <TextView
        android:id="@+id/nodata_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/sorry_no_data"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:visibility="gone" />

</RelativeLayout>