<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <!-- This is for the info image -->

        <Button
            android:id="@+id/binfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dip"
            android:background="@drawable/info_custom_button" />

        <!-- Title -->

        <TextView
            android:id="@+id/tvmessagedialogtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dip"
            android:layout_weight="0.01"
            android:padding="8dp"
            android:text="@string/logout"
            android:textColor="#343434"
            android:textSize="16sp"
            android:textStyle="normal"
            android:typeface="normal" />
    </LinearLayout>

    <!-- Underline with this bluish color -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:background="#09adb9" />

    <!-- The message -->

    <TextView
        android:id="@+id/blogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dip"
        android:gravity="left"
        android:padding="8dp"
        android:text="@string/logout"
        android:textColor="#343434"
        android:textSize="15sp"
        android:textStyle="normal"
        android:typeface="normal"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dip"
        android:orientation="horizontal" >

        <!-- Yes button -->

        <Button
            android:id="@+id/bYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dip"
            android:layout_weight="1"
            android:background="@drawable/yes_custom_button"
            android:padding="8dp"
            android:text="@string/yes"
            android:textColor="#343434"
            android:textSize="13sp"
            android:textStyle="normal"
            android:typeface="normal" />

        <!-- No Button -->

        <Button
            android:id="@+id/bNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="4dip"
            android:layout_weight="1"
            android:background="@drawable/yes_custom_button"
            android:padding="8dp"
            android:text="@string/no"
            android:textColor="#343434"
            android:textSize="13sp"
            android:textStyle="normal"
            android:typeface="normal" />
    </LinearLayout>

</LinearLayout>